public/data/GI1MP3/log.txt
  File "/Users/diego/Documents/GitHub/proteus/public/data/../../application/bin/ssv.py", line 495
    print mutation
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(mutation)?
